[workspace]
resolver = "2"
members = [
    "runtime-rust",
    "parseit",
    "sdk-rust",
    "sdk-debugger",
    "sdk-unicode-gen",
    "himecc",
    "tests-executor-rust",
    "tests-driver",
    "langserv"
, "demo"]

[patch.crates-io]
hime_redist = { path = "./runtime-rust" }
hime_sdk = { path = "./sdk-rust" }
